--- a/VidCoder/Resources/Translations/ChapterMarkersRes.tr.resx
+++ b/VidCoder/Resources/Translations/ChapterMarkersRes.tr.resx
@@ -99,7 +99,7 @@
 		<value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.3500.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
 	</resheader>
   <data name="ChapterMarkersDialogTitle">
-    <value xml:space="preserve">Bölüm İşaretleri</value>
+    <value xml:space="preserve">Bölüm Belirteçleri</value>
   </data>
   <data name="DefaultChapterNamesRadioButton">
     <value xml:space="preserve">Varsayılan bölüm adlarını kullan</value>
