--- a/VidCoder/Resources/Translations/CommonRes.tr.resx
+++ b/VidCoder/Resources/Translations/CommonRes.tr.resx
@@ -118,23 +118,23 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="AboutLicense" xml:space="preserve">
-    <value>Bu program ücretsiz bir yazılımdır; Ücretsiz Yazılım Vakfı (Free Software Foundation) tarafından yayımlandığı gibi, GNU Genel Kamu Lisansı (General Public License) sürüm 2 şartları altında yeniden dağıtabilir ve/veya değiştirebilirsiniz.
+    <value>Bu program ücretsiz bir yazılımdır; Özgür Yazılım Vakfı tarafından yayımlanan GNU Genel Kamu Lisansı sürüm 2 veya (isteğe bağlı) daha sonraki bir sürümün hükümlerine göre yeniden dağıtabilir ve / veya değiştirebilirsiniz.
 
-Bu program faydalı olacağı umuduyla dağıtılmaktadır ama HERHANGİ BİR GARANTİSİ YOKTUR; BELİRLİ BİR AMACA veya TİCARETE UYGUNLUĞUNUN dolaylı bile garantisi yoktur. Daha fazla ayrıntı için GNU General Public License’a bakın.
+Bu program faydalı olacağı umuduyla dağıtılmaktadır ama HERHANGİ BİR GARANTİSİ YOKTUR; TİCARETE veya BELİRLİ BİR AMACA UYGUNLUĞUNUN zımmi garantisi dahi yoktur. Daha fazla bilgi için GNU Genel Kamu Lisansına bakınız.
 
-GNU General Public License kopyası bu programa dahil edilmiştir.</value>
+GNU Genel Kamu Lisansının tam kopyası bu programla birlikte verilmiştir.</value>
   </data>
   <data name="BurnedSubtitleToolTip" xml:space="preserve">
-    <value>Altyazıyı filmin üzerine yaz. Gömülü altyazı film izlerken devre dışı bırakılamaz.</value>
+    <value>Altyazıyı filmin üzerine gömün. Gömülü altyazı film izlerken devre dışı bırakılamaz.</value>
   </data>
   <data name="DefaultSubtitleToolTip" xml:space="preserve">
     <value>Bu altyazıyı varsayılan olarak seç. Başka bir altyazı seçilene kadar oynatma esnasında bu altyazı gösterilecektir.</value>
   </data>
   <data name="ForcedSubtitleToolTip" xml:space="preserve">
-    <value>Altyazı parçlarından sadece zorunlu altyazıları göster. Bu genellikle az miktarda yabancı diyalog demektir.</value>
+    <value>Altyazılardan sadece zorunlu altyazı(ları) göster. Bu genellikle az miktarda yabancı diyalog parçaları demektir.</value>
   </data>
   <data name="OffsetSubtitleToolTip" xml:space="preserve">
-    <value>Seçili altyazıların gösterimini öne  alma ya da  geciktirme süresi miktarı.</value>
+    <value>Verilen altyazıların gösterimini öne alma veya geciktirme için gereken süre.</value>
   </data>
   <data name="QueueColumnNameRange" xml:space="preserve">
     <value>Aralık</value>
@@ -163,7 +163,7 @@ GNU General Public License kopyası bu programa dahil edilmiştir.</value>
     <value>Video Kalitesi</value>
   </data>
   <data name="QueueEtaToolTip" xml:space="preserve">
-    <value>Suradaki tüm işleri tamamlamak için kalan tahmini süre.</value>
+    <value>Kuyruktaki tüm işler için kalan tahmini süre.</value>
   </data>
   <data name="QueueColumnNameDuration" xml:space="preserve">
     <value>Süre</value>
@@ -180,7 +180,7 @@ GNU General Public License kopyası bu programa dahil edilmiştir.</value>
     <comment>Usually used in settings, when there is a default option. For example for Decomb there is Off, Default, Fast, Bob and Custom.</comment>
   </data>
   <data name="Browse" xml:space="preserve">
-    <value>Gözat...</value>
+    <value>Gözat…</value>
   </data>
   <data name="Delete" xml:space="preserve">
     <value>Sil</value>
@@ -239,7 +239,7 @@ GNU General Public License kopyası bu programa dahil edilmiştir.</value>
     <value>{0} Dosya</value>
   </data>
   <data name="QueueColumnNamePreset" xml:space="preserve">
-    <value>Hazır Ayar</value>
+    <value>Önayar</value>
   </data>
   <data name="Success" xml:space="preserve">
     <value>Başarılı</value>
@@ -254,27 +254,27 @@ GNU General Public License kopyası bu programa dahil edilmiştir.</value>
     <value>Dosya işlemi hatası</value>
   </data>
   <data name="OverrideNameFormatCheckBox" xml:space="preserve">
-    <value>Genel geçer adlandırma biçimi:</value>
+    <value>Adlandırma biçimini geçersiz kıl:</value>
   </data>
   <data name="OutputToSourceDirCheckBox" xml:space="preserve">
-    <value>Mümkünse kaynak dizine çıktıla</value>
+    <value>Mümkünse kaynak dizine çıkar</value>
   </data>
   <data name="PreserveFolderStructureCheckBox" xml:space="preserve">
-    <value>Toplu kodlamalarda klasör yapısını koru</value>
+    <value>Çoklu kodlamalarda klasör yapısını koru</value>
   </data>
   <data name="PreserveFolderStructureToolTip" xml:space="preserve">
-    <value>Eğer içi dosya dolu bir klasörü kodlarsanız, kodlanmış sürümler kaynak klasörün dizin yapısına uygun olarak alt klasörlere konulacaktır.</value>
+    <value>Dosyalarla dolu bir klasörü kodlarsanız, kodlanmış sürümler kaynak dizin yapısına uyacak şekilde alt klasörlere konacaktır.</value>
   </data>
   <data name="DismissMessage" xml:space="preserve">
-    <value>İletiyi kapat</value>
+    <value>Mesajı kapat</value>
     <comment>Appears as a tooltip on inline, dismissable messages</comment>
   </data>
   <data name="PresetFileFilter" xml:space="preserve">
-    <value>VidCoder Ön Ayar Dosyası</value>
+    <value>VidCoder Önayar Dosyası</value>
     <comment>File dialog description of a .vjpreset file: JSON file that stores an exported preset.</comment>
   </data>
   <data name="QueueFileFilter" xml:space="preserve">
-    <value>Vidcoder Kuyruk Dosyası</value>
+    <value>VidCoder Kuyruk Dosyası</value>
     <comment>File dialog description of a .vjqueue file: JSON file that stores an exported queue.</comment>
   </data>
   <data name="First" xml:space="preserve">
@@ -282,7 +282,7 @@ GNU General Public License kopyası bu programa dahil edilmiştir.</value>
     <comment>Choice to pick the first item in a list, like audio or subtitle tracks.</comment>
   </data>
   <data name="DuplicateTrack" xml:space="preserve">
-    <value>Bu parçayı çoğaltın</value>
+    <value>Bu parçayı çoğalt</value>
     <comment>Tip to duplicate the audio or subtitle track.</comment>
   </data>
   <data name="RemoveTrack" xml:space="preserve">
