--- a/VidCoder/Resources/Translations/PickerRes.tr.resx
+++ b/VidCoder/Resources/Translations/PickerRes.tr.resx
@@ -118,64 +118,64 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="AudioSelection" xml:space="preserve">
-    <value>Ses seçimi</value>
+    <value>Ses Seçimi</value>
   </data>
   <data name="BurnInCheckBox" xml:space="preserve">
-    <value>Yanmak</value>
+    <value>Video'ya göm</value>
   </data>
   <data name="DefaultCheckBox" xml:space="preserve">
     <value>Varsayılan</value>
   </data>
   <data name="ForeignAudioSearchRadioButton" xml:space="preserve">
-    <value>Yabancı Ses Araması</value>
+    <value>Yabancı Ses Arama</value>
   </data>
   <data name="IncludeAllTracksRadioButton" xml:space="preserve">
-    <value>Tüm parçalar</value>
+    <value>Tüm Parçalar</value>
   </data>
   <data name="LanguagesRadioButton" xml:space="preserve">
-    <value>Diller</value>
+    <value>Dil(ler)</value>
   </data>
   <data name="OnlyIfDifferentFromAudioCheckBox" xml:space="preserve">
-    <value>Yalnızca sesten farklı bir dil varsa</value>
+    <value>Ses dilinden farklı bir dil varsa</value>
     <comment>Label for checkbox on subtitle picker. When checked, it will only include the subtitle if it's a different language from the chosen audio track.</comment>
   </data>
   <data name="SubtitleSelection" xml:space="preserve">
-    <value>Altyazı seçimi</value>
+    <value>Altyazı Seçimi</value>
   </data>
   <data name="WindowTitle" xml:space="preserve">
     <value>Seçici: {0}</value>
   </data>
   <data name="TitleSelection" xml:space="preserve">
-    <value>Başlık seçimi</value>
+    <value>Başlık Seçimi</value>
   </data>
   <data name="PickerButtonFormat" xml:space="preserve">
     <value>Seçici: {0}</value>
     <comment>{0} is the name of the picker. This string shows up on the picker split button.</comment>
   </data>
   <data name="OutputLocation" xml:space="preserve">
-    <value>Çıktı konumu</value>
+    <value>Çıktı Konumu</value>
   </data>
   <data name="OverrideDirectoryCheckBox" xml:space="preserve">
-    <value>Klasörü geçersiz kıl:</value>
+    <value>Klasörü Geçersiz Kıl:</value>
   </data>
   <data name="PickerHelpText" xml:space="preserve">
     <value>Başlıkları, sesleri, altyazıları ve hedefi otomatik olarak seç</value>
   </data>
   <data name="AutoQueueOnScanCheckBox" xml:space="preserve">
-    <value>Taramadan sonra otomatik olarak sıraya ekle</value>
+    <value>İncelemeden sonra otomatik olarak kuyruğa ekle</value>
   </data>
   <data name="AutoEncodeOnScanCheckBox" xml:space="preserve">
-    <value>Taramadan sonra kodlamayı başlat</value>
+    <value>İncelemeden sonra kodlamayı başlat</value>
   </data>
   <data name="UseGlobalSettingToolTip" xml:space="preserve">
     <value>Genel ayarı kullan</value>
     <comment>Label for the "indeterminate" checkbox state that lets the user know that this will fall back to the global setting</comment>
   </data>
   <data name="PresetOverrideToolTip" xml:space="preserve">
-    <value>Bu, ana pencerede seçilen ön ayarları geçersiz kılar.</value>
+    <value>Bu, ana pencerede seçilen ön ayarı geçersiz kılar.</value>
   </data>
   <data name="EncodingSection" xml:space="preserve">
-    <value>Kodlanıyor</value>
+    <value>Kodlama</value>
     <comment>The header for the Encoding section in the Picker window.</comment>
   </data>
   <data name="PostEncodingSection" xml:space="preserve">
@@ -187,11 +187,11 @@
     <comment>Label for the option to run a program after encoding each file.</comment>
   </data>
   <data name="PostEncodeArgumentsLabel" xml:space="preserve">
-    <value>Argümanlar:</value>
+    <value>Değişkenler:</value>
     <comment>The label for the arguments to pass to the post-encode executable.</comment>
   </data>
   <data name="PostEncodeArgumentsToolTip" xml:space="preserve">
-    <value>Programa iletilecek argümanlar. Dosya çıktı yolu için {file}, klasör yolu veya {title} ve {date} gibi diğer yol seçeneklerini içeren {folder} kullanın (bkz. Adlandırma Biçimi).</value>
+    <value>Programa iletilecek değişkenler. Dosya çıktı yolu için {file}, klasör yolu veya {title} ve {date} gibi diğer yol seçeneklerini içeren {folder} kullanın (bkz. Adlandırma Formatı).</value>
     <comment>Tool tip for the post-encode arguments UI. Do not translate {file} .</comment>
   </data>
   <data name="PresetDisabledForPickerToolTip" xml:space="preserve">
@@ -207,26 +207,26 @@
     <value>Bu dil için tüm parçalar</value>
   </data>
   <data name="FirstTrackOfEachLanguageRadioButton" xml:space="preserve">
-    <value>Her dilin ilk parça</value>
+    <value>Her dilin ilk parçası</value>
   </data>
   <data name="FirstTrackRadioButton" xml:space="preserve">
     <value>İlk parça</value>
   </data>
   <data name="SingleSubtitleDefaultToolTip" xml:space="preserve">
-    <value>Altyazı dosyasını varsayılan olarak işaretleyin, böylece video oynatılırken otomatik olarak gösterilecektir.</value>
+    <value>Bir altyazıyı varsayılan olarak işaretleyin, böylece video oynatılırken otomatik olarak gösterilecektir.</value>
   </data>
   <data name="MultipleSubtitleDefaultToolTip" xml:space="preserve">
-    <value>İlk altyazı parçasını varsayılan olarak işaretleyin, böylece video oynatılırken otomatik olarak görünecektir.</value>
+    <value>İlk altyazıyı varsayılan olarak işaretleyin, böylece video oynatılırken otomatik olarak gösterilecektir.</value>
   </data>
   <data name="FirstAsDefaultCheckBox" xml:space="preserve">
-    <value>Birinciyi varsayılan olarak işaretle</value>
+    <value>İlk altyazıyı varsayılan olarak işaretle</value>
     <comment>Label for checkbox to mark the first subtitle as default.</comment>
   </data>
   <data name="AllSubtitlesToolTip" xml:space="preserve">
     <value>Tüm altyazıları dahil et.</value>
   </data>
   <data name="SubtitleNoneToolTip" xml:space="preserve">
-    <value>Altyazı dahil edilmedi.</value>
+    <value>Hiçbir altyazı dahil edilmedi.</value>
   </data>
   <data name="AudioFirstToolTip" xml:space="preserve">
     <value>Sadece ilk sesi dahil et.</value>
@@ -235,10 +235,10 @@
     <value>Tüm sesleri dahil et.</value>
   </data>
   <data name="SubtitleFirstToolTip" xml:space="preserve">
-    <value>Sadece ilk alt yazıyı dahil et.</value>
+    <value>Sadece ilk altyazıyı dahil et.</value>
   </data>
   <data name="PresetLabel" xml:space="preserve">
-    <value>Hazır ayar kullan:</value>
+    <value>Önayar kullan:</value>
   </data>
   <data name="RemoveLanguageToolTip" xml:space="preserve">
     <value>Bu dili kaldır.</value>
@@ -247,17 +247,17 @@
     <value>Dil(leri) en üste sırala:</value>
   </data>
   <data name="ForcedOnlyCheckBox" xml:space="preserve">
-    <value>Sadece zorla</value>
+    <value>Sadece zorlanan</value>
     <comment>Label for checkbox in Picker window to choose only Forced subtitles of the chosen subtitle track.</comment>
   </data>
   <data name="AudioDefaultToolTip" xml:space="preserve">
-    <value>Bir eşleşme bulunursa en son seçilen ses parçasını seçer, aksi takdirde ilkini seçer.</value>
+    <value>Bir eşleşme bulunursa en son seçilen sesi seçer, aksi takdirde ilkini seçer.</value>
   </data>
   <data name="LastSelectedRadioButton" xml:space="preserve">
     <value>Son seçilen</value>
   </data>
   <data name="SubtitleLastSelectedToolTip" xml:space="preserve">
-    <value>Bir eşleşme bulunursa en son seçilen altyazı parçasını seçer, aksi takdirde hiçbirini seçmez.</value>
+    <value>Bir eşleşme bulunursa en son seçilen altyazıyı seçer, aksi takdirde hiçbirini seçmez.</value>
     <comment>Tooltip for the "last selected" option for subtitle picker. This will pick the last selected subtitle track if the track index and language match. Otherwise it will select no tracks.</comment>
   </data>
   <data name="OverrideNameFormatLabel" xml:space="preserve">
@@ -284,7 +284,7 @@
     <value>Zaman aralığı seçin</value>
   </data>
   <data name="TitleCaptializationLabel" xml:space="preserve">
-    <value>Otomatik büyük harf yap:</value>
+    <value>Başlığı büyük harfe çevirme:</value>
   </data>
   <data name="TimeRangeStartAutomationName" xml:space="preserve">
     <value>Zaman aralığı başlangıcı</value>
