Added a "Clear finished" button to the log window to clear away logs for finished scans and encodes.

--- a/VidCoder/Resources/LogRes.resx
+++ b/VidCoder/Resources/LogRes.resx
@@ -139,4 +139,7 @@
   <data name="PastebinSuccessStatus" xml:space="preserve">
     <value>Link to log on Pastebin has been copied to the clipboard.</value>
   </data>
+  <data name="ClearFinishedButton" xml:space="preserve">
+    <value>Clear finished</value>
+  </data>
 </root>
