Added ability to automatically select chapter ranges with the Picker.

--- a/VidCoder/Resources/EnumsRes.resx
+++ b/VidCoder/Resources/EnumsRes.resx
@@ -283,4 +283,10 @@
   <data name="LogOperationType_Scan" xml:space="preserve">
     <value>Scan</value>
   </data>
+  <data name="PickerTimeRangeMode_Chapters" xml:space="preserve">
+    <value>Chapters</value>
+  </data>
+  <data name="PickerTimeRangeMode_Time" xml:space="preserve">
+    <value>Time range</value>
+  </data>
 </root>
