--- a/VidCoder/Resources/PickerRes.resx
+++ b/VidCoder/Resources/PickerRes.resx
@@ -302,4 +302,10 @@
   <data name="SelectTracksHelpText" xml:space="preserve">
     <value>Comma separated - ex. 2,5</value>
   </data>
+  <data name="ChapterRangeEndAutomationName" xml:space="preserve">
+    <value>Chapter range end</value>
+  </data>
+  <data name="ChapterRangeStartAutomationName" xml:space="preserve">
+    <value>Chapter range start</value>
+  </data>
 </root>
